--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+metal = "0.28"
+objc = "0.2"
+image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
